notes: add pdf version of notes

--- a/notes/model_overview.tex
+++ b/notes/model_overview.tex
@@ -15,6 +15,7 @@
 \newcommand{\XX}{\mathbf{X}}
 \newcommand{\RR}{\mathbf{R}}
 \newcommand{\TT}{\mathbf{T}}
+\newcommand{\nn}{\mathbf{n}}
 \newcommand{\xx}{\mathbf{x}}
 \newcommand{\yy}{\mathbf{y}}
 \newcommand{\qq}{\mathbf{q}}
